[gd_scene format=3]

[ext_resource type="Script" path="res://CameraUI.gd" id="1"]

[node name="CameraUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
color = Color(0, 0, 0, 0.6)
anchor_right = 1.0
anchor_bottom = 1.0

[node name="CamLabel" type="Label" parent="."]
anchor_right = 1.0
offset_left = 24.0
offset_top = 24.0
offset_right = -24.0
offset_bottom = 64.0
text = "CAM 1"

[node name="CloseButton" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
offset_left = -120.0
offset_top = 16.0
offset_right = -24.0
offset_bottom = 56.0
text = "Close"

[node name="CamButtons" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = -180.0
offset_top = -72.0
offset_right = 180.0
offset_bottom = -24.0

[node name="Cam1Button" type="Button" parent="CamButtons"]
text = "CAM 1"

[node name="Cam2Button" type="Button" parent="CamButtons"]
text = "CAM 2"

[node name="Cam3Button" type="Button" parent="CamButtons"]
text = "CAM 3"
